# inginious-coding-style

./: .pre-commit-config.yaml  404.html  README.md  TODO  config_example.yaml  index.html  pyproject.toml  sitemap.xml
.github/workflows/: build.yml  ci.yml  mkdocs.yml
changelog/: index.html
configuration/: index.html
developer-guide/: index.html
docs/: mkdocs.yml
docs/docs/: changelog.md  configuration.md  developer-guide.md  index.md  installation.md
docs/docs/tutorial/: index.md  student-guide.md  tutor-guide.md
docs/scripts/: common.py  generate_categories.py  generate_config_schema.py  run.sh
inginious_coding_style/: __init__.py  _types.py  config.py  exceptions.py  fs.py  grades.py  logger.py  mixins.py  submission.py  utils.py
inginious_coding_style/pages/: __init__.py  base.py  grade_student.py  grade_tutor.py  plugin_settings.py
inginious_coding_style/templates/: alert.html  course_menu.html  diagnosis.html  grade_submission.html  main.html  newcategory.html  plugin_settings.html  recalculate_grades.html  repair_submissions.html  stylegrade.html  submission_admin_menu.html  submission_query_button.html  submission_query_data.html  submission_query_header.html  task_list_bar_label.html  task_list_item.html  task_menu.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_fs.py  test_grades.py  test_plugin_settings.py  test_submission.py  test_templates.py  test_utils.py
tests/resources/: configuration.yaml
tutorial/student-guide/: index.html
tutorial/tutor-guide/: index.html
