[tool.poetry]
name = "inginious-coding-style"
version = "0.1.0"
description = ""
authors = ["Peder Hovdan Andresen <pedeha@stud.ntnu.no>"]

[tool.poetry.dependencies]
python = "^3.8"
inginious = "^0.7"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.6b0"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.1"
markdown-include = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
