[tool.poetry]
name = "inginious-coding-style"
version = "1.2.0"
description = ""
authors = ["Peder Hovdan Andresen <pedeha@stud.ntnu.no>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/PederHA/inginious-coding-style"
documentation = "https://pederha.github.io/inginious-coding-style"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Topic :: Education",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
inginious = "^0.7"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.6b0"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.1"
markdown-include = "^0.6.0"
mkdocs-markdownextradata-plugin = "^0.2.4"
pyyaml = "^5.4.1"
types-PyYAML = "^5.4.3"
Pygments = "^2.9.0"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-lazy-fixture = "^0.6.3"
hypothesis = "^6.14.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
